feat: add auth endpoints and handlers and fix version mismatch
